<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/edit_routine"
		android:textSize="26sp"
		android:textColor="#20DEE8"
		/>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/name"
			android:textSize="20sp"/>

		<EditText android:id="@+id/name"
		  android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
			android:textSize="20sp"/>

		<EditText android:id="@+id/day"
			android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/exercises"
			android:textSize="20sp"/>
		<TextView
			android:id="@+id/countLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:layout_marginLeft="11sp"
			android:textColor="#FFF"
			android:layout_weight="0.04"
			/>
		<Button
			android:id="@+id/addExerciseButton"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="+"
			android:layout_gravity="right"
			android:textSize="26sp"
			android:onClick="onButtonClick"/>
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout android:orientation="vertical"
			android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<ListView android:id="@+id/exerciseListView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:scrollbars="vertical" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<Button android:id="@+id/cancelButton"
					android:text="@string/cancel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="8dp"
					android:onClick="onButtonClick"/>

				<Button android:id="@+id/confirmButton"
					android:text="@string/confirm"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_marginRight="8dp"
					android:layout_marginTop="8dp"
					android:layout_gravity="right"
					android:onClick="onButtonClick"/>
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>




</LinearLayout>
