<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/muscle"
			android:textSize="20sp"/>
		<Spinner
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muscle"
			android:textSize="20sp"/>

		<EditText android:id="@+id/muscle" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:orientation="horizontal">

		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button android:id="@+id/cancelButton"
				android:text="@string/cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="8dp"
				android:onClick="onButtonClick"/>

			<Button
				android:id="@+id/confirmButton"
				android:text="@string/confirm"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_marginRight="8dp"
				android:layout_marginTop="8dp"
				android:layout_gravity="right"
				android:onClick="onButtonClick"/>

		</RelativeLayout>
	</LinearLayout>

</LinearLayout>